Use portable state clamping